--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm start"
-    
-
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/Javiercuin99/E-commerce-back/issues"
   },
-  "homepage": "https://github.com/Javiercuin99/E-commerce-back#readme"
+  "homepage": "https://github.com/Javiercuin99/E-commerce-back#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
