--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/Javiercuin99/E-commerce-back.git"
   },
-  "author": "",
+  "author": "grupo2",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Javiercuin99/E-commerce-back/issues"
@@ -22,6 +22,8 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.0"
   }
 }
