--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
+    "nodemailer": "^6.7.5",
     "validator": "^13.7.0"
   }
 }
